# coral

./: .gitignore  Cargo.toml  DataCleaning.ipynb  LICENSE  README.md  out  p_json_test_128  p_json_test_64  p_test2  to_verify.proof  v_json_test_128  v_json_test_64  v_test2
.ipynb_checkpoints/: DataCleaning-checkpoint.ipynb
grammars/: c_simple.pest  json.pest  test_any.pest  test_atomic.pest  test_np.pest  test_simple.pest  test_ws.pest  toml.pest
metrics/: Cargo.toml  metrics.rs
risc0/c/: Cargo.toml
risc0/c/core/: Cargo.toml
risc0/c/lang-c/src/: driver.rs  print.rs
risc0/c/methods/: Cargo.toml
risc0/c/methods/guest/: Cargo.toml
risc0/c/methods/guest/src/: main.rs
risc0/c/src/: main.rs
risc0/cfg_gen/: Cargo.toml
risc0/cfg_gen/core/: Cargo.toml
risc0/cfg_gen/core/src/: lib.rs
risc0/cfg_gen/methods/: Cargo.toml  build.rs
risc0/cfg_gen/methods/guest/: Cargo.toml
risc0/cfg_gen/methods/guest/src/: main.rs
risc0/cfg_gen/methods/src/: lib.rs
risc0/cfg_gen/src/: lib.rs  main.rs
risc0/json/: Cargo.toml
risc0/json/core/: Cargo.toml
risc0/json/core/src/: lib.rs
risc0/json/methods/: Cargo.toml
risc0/json/methods/guest/: Cargo.toml
risc0/json/methods/guest/src/: main.rs
risc0/json/src/: main.rs
risc0/toml/: Cargo.toml
risc0/toml/core/: Cargo.toml
risc0/toml/methods/: Cargo.toml
risc0/toml/methods/guest/: Cargo.toml
risc0/toml/methods/guest/src/: main.rs
risc0/toml/src/: main.rs
sp1/json/program/src/: main.rs
sp1/json/script/src/: main.rs
src/: circuit.rs  config.rs  lib.rs  main.rs  parser.rs  prover.rs  solver.rs  util.rs  verifier.rs
tests/results/memory/apps/: c_c1_coral  c_c1_risc0_c  c_c1_risc0_cfg  c_c2_coral  c_c2_risc0_c  c_c2_risc0_cfg  c_c3_coral  c_c3_risc0_c  c_llvm_coral  c_llvm_risc0_c  json_bank_citi_coral  json_bank_citi_risc0_cfg  json_bank_citi_risc0_json  json_bank_plaid_coral  json_bank_plaid_risc0_cfg  json_bank_plaid_risc0_json  json_dk_coral  json_dk_risc0_cfg  json_dk_risc0_json  json_dmv_veratad_coral  json_dmv_veratad_risc0_cfg  json_dmv_veratad_risc0_json  json_hibp_risc0_cfg  json_hibp_risc0_json  json_hibp_small_risc0_cfg  json_hibp_small_risc0_json  json_hibps_coral  json_jwt_coral  json_jwt_risc0_cfg  json_jwt_risc0_json  toml_t1_coral  toml_t1_risc0_cfg  toml_t1_risc0_toml  toml_t2_coral  toml_t2_risc0_cfg  toml_t2_risc0_toml  toml_t3_coral  toml_t3_risc0_cfg  toml_t3_risc0_toml
tests/results/memory/scale/: json_1024_coral  json_1024_risc0_cfg  json_1024_risc0_json  json_128_coral  json_128_risc0_cfg  json_128_risc0_json  json_16384_coral  json_16384_risc0_json  json_2048_coral  json_2048_risc0_cfg  json_2048_risc0_json  json_256_coral  json_256_risc0_cfg  json_256_risc0_json  json_32768_coral  json_32768_risc0_json  json_4096_coral  json_4096_risc0_cfg  json_4096_risc0_json  json_512_coral  json_512_risc0_cfg  json_512_risc0_json  json_64_coral  json_64_risc0_cfg  json_64_risc0_json  json_65536_coral  json_65536_risc0_json  json_8192_coral  json_8192_risc0_json
tests/results/timings/apps/: c_c1_coral.txt  c_c1_risc0_c.txt  c_c1_risc0_cfg.txt  c_c2_coral.txt  c_c2_risc0_c.txt  c_c2_risc0_cfg.txt  c_c3_coral.txt  c_c3_risc0_c.txt  c_c3_risc0_cfg.txt  c_llvm_coral.txt  c_llvm_risc0_c.txt  c_llvm_risc0_cfg.txt  json_bank_citi_coral.txt  json_bank_citi_risc0_cfg.txt  json_bank_citi_risc0_json.txt  json_bank_plaid_coral.txt  json_bank_plaid_risc0_cfg.txt  json_bank_plaid_risc0_json.txt  json_dk_coral.txt  json_dk_risc0_cfg.txt  json_dk_risc0_json.txt  json_dmv_veratad_coral.txt  json_dmv_veratad_risc0_cfg.txt  json_hibp_risc0_cfg.txt  (+17 more)
tests/scripts/apps/: c_app.sh  json_app.sh  risc0c_app.sh  risc0cfg_app.sh  risc0json_app.sh  risc0toml_app.sh  toml_app.sh
tests/scripts/scale/: json_scale.sh  risc0cfg_scale.sh  risc0json_scale.sh
tests/test_docs/c/: c1.txt  c2.txt  c3.txt  llvm_test_puzzle.txt  llvm_test_puzzle_mod.txt
tests/test_docs/json/: bank_citi.txt  bank_plaid.txt  dmv_veratad.txt  draftgroups_dk.txt  hibp.txt  hibp_small.txt  jwt.txt  test_json_1024.txt  test_json_128.txt  test_json_16384.txt  test_json_2048.txt  test_json_256.txt  test_json_32768.txt  test_json_4096.txt  test_json_512.txt  test_json_64.txt  test_json_65536.txt  test_json_8192.txt  test_json_small.txt
tests/test_docs/toml/: coral_toml.txt  small_toml.txt  t3.txt
(+29 files in other folders)
