[package]
name = "coral"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.1.8", features = ["derive"] }
itertools = "0.14"
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
ff = { version = "0.13.0", features = ["derive"] }

pest = "2.6"
pest_derive = "2.6"
pest_meta = "2.1"
pest_vm = "2.1"

rand = "0.8.4"
merlin = {version = "3.0.0", default-features = false }
csv = "1.2"
dashmap = { version = "6.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
rayon = "1.7"
bincode = "1.3.3"
petgraph = "0.6"

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3" }
memory-stats = "1.1.0"
metrics = {path="metrics"}

segmented_circuit_memory = { git = "https://github.com/jkwoods/segmented_circuit_memory" }
nova-snark = { git = "https://github.com/jkwoods/Nova", default-features = false }
#nova-snark = { path = "../jess_Nova", default-features = false }
bellpepper-core = { version="0.4.0", default-features = false }

ark-ff = { version = "0.5.0", default-features = false  }
ark-relations = { version = "0.5.0", default-features = false }
ark-r1cs-std = {  version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", features = ["scalar_field"] }
ark-std = {  version = "0.5.0", default-features = false }
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = { version = "0.5", features = ["derive", "serde", "serde_with" ] }
serde_with = "3.13.0"
sha2 = "0.10.9"

[patch.crates-io]
ark-relations = {  git = "https://github.com/arkworks-rs/snark/" }
ark-snark = {  git = "https://github.com/arkworks-rs/snark/" }
ark-r1cs-std = {  git = "https://github.com/arkworks-rs/r1cs-std" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra/"}

[features]
metrics = ["dep:dashmap"]
para = []

[profile.test]
opt-level = 3