[package]
name = "validate_input"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-core = { path = "core" }
cfg_validation = { path = "methods" }
risc0-zkvm = { version = "2.0.0", default-features = false, features = ["std", "prove", "client","metal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = {path="../../metrics"}
dashmap = { version = "5.4", optional = true }
csv = "1.2"

[features]
metrics = ["dep:dashmap"]
